
    StanfordAuthDontCache   -> maps to WebAuthDontCache. If AuthType
                               is set to StanfordAuth, defaults to 1.

    StanfordAuthForceReload -> maps to WebAuthExtraRedirect

    StanfordAuthLife        -> maps to WebAuthAppTokenLifetime and enables
                               WebAuthForceLogin

    StanfordAuthReturnURL   -> maps to WebAuthReturnURL
   
 *) Have the WebKDC re-read the token ACL file if its mtime changes.

 *) Added WebAuthAuthType directive to help people transistion to
    mod_webauth.  This directive allows you to specify an additional
    AuthType name that will be treated the same as WebAuth.  If
    this directive is set to StanfordAuth, it will also set two
    extra environment variables: SU_AUTH_USER and SU_AUTH_AGE.

 *) Cleanup environment variable setting. Set environment variables
    (r->subprocess_env) in check_user_id hook instead of waiting
    until fixups hook to make them more accessible to other hooks/modules.

 *) When scrubbing tokens from r->args and r->parsed_uri.query, look
    for "?WEBAUTHR=" first then "WEBAUTHR=", since if there were no
    query args, the tokens could get parsed as query args. This
    caused tokens to show up as query args when we changed from
    ";WEBAUTHR=" to "?WEBAUTHR=".

 *) If we are proxying a request, strip out all webauth_* cookies and
    and webauth tokens from Referer header.  Also, if we are proxying
    or the URI passed to the server in the HTTP request has a scheme,
    use it as the return URL instead of constructing one relative to the
    server.

 *) Modify WebAuthKeytab and WebKdcKeytab directives so 
    you can optionally specify which principal to use with
    the specified keytab, instead of using the first principal found.
    This required modifying webauth_krb5_* APIs.
 
 *) Implement WebAuthProxyHeaders directive.  See WebAuth module
    documentation for more information.

 *) Clean up header includes in tests and wa_keyring.
