@@ -30,6 +30,8 @@ WebAuth 3.1.0 (in progress)
 
     StanfordAuthReturnURL   -> maps to WebAuthReturnURL
 
+    StanfordAuthGroups      -> unsupported, if specified access is denied
+
  *) Have the WebKDC re-read the token ACL file if its mtime changes.
 
  *) Added WebAuthAuthType directive to help people transistion to
