@@ -29,6 +29,8 @@ WebAuth 3.1.0 (in progress)
                                WebAuthForceLogin
 
     StanfordAuthReturnURL   -> maps to WebAuthReturnURL
+
+    StanfordAuthGroups      -> unsupported, if specified access is denied
    
  *) Have the WebKDC re-read the token ACL file if its mtime changes.
 
